# sample_server

./: .env  Anchor.toml  Cargo.toml  README.md
client/: Cargo.toml
client/src/: counter.rs  lib.rs  main.rs
examples/: future.rs  mini_tokio.rs  patience.rs
programs/hahatoco/: Cargo.toml
programs/hahatoco/src/: lib.rs
public/: hello.html  index.html
scripts/: run.sh
src/: error.rs  instruction.rs  lib.rs  main.rs  processor.rs  server.rs  state.rs  website_handler.rs
src/http/: mod.rs  query_string.rs  request.rs  response.rs
tests/: Cargo.toml  hahatoco.ts
tests/src/: test_initialize.rs
