[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29.0"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
solana-sdk = "1.18.0"
tokio = { version = "1.35.1", features = ["full"] }
