[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29.0"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
hahatoco = { path = "../programs/hahatoco", features = ["no-entrypoint"] }
mpl-token-metadata = "4.0.0"
shellexpand = "3.1.0"
solana-sdk = "1.18.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.35.1", features = ["full"] }
