[package]
name = "hahatoco"
version = "0.1.0"
description = "NFT staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hahatoco"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "=0.8.6"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
mpl-token-metadata = "4.0.0"

